<resources>
    <string name="app_name">zadanie_01</string>

    <string name="show_count">Q%d</string>
    <string name="show_question">Quiz - fizyka</string>
    <string name="show_cheat">Oszukuj</string>
    <string name="cheatanswer">CheatAnswer</string>
    <string name="return_button">Wróć do quizu</string>
    <string name="true_">Prawda</string>
    <string name="false_">Fałsz</string>
    <string name="wyszukaj_odpowied_online">Wyszukaj odpowiedź online</string>

</resources>