<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFAFB"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/show_question"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/default_drawable_shape"
        android:gravity="center"
        android:text="@string/show_question"
        android:textColor="#BA68C8"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.324" />

    <Button
        android:id="@+id/show_cheat"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#B3E5FC"
        android:onClick="showCheat"
        android:text="@string/show_cheat"
        android:textColor="#EA80FC"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/true_button"
        app:layout_constraintVertical_bias="0.024"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/true_button"
        android:layout_width="197dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="114dp"
        android:backgroundTint="#E3F2FD"
        android:onClick="answer"
        android:text="@string/true_"
        android:textColor="#EA80FC"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.478" />

    <Button
        android:id="@+id/search"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#D1C4E9"
        android:text="@string/wyszukaj_odpowied_online"
        android:textColor="#E3F2FD"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/show_cheat"
        app:layout_constraintVertical_bias="0.06" />

    <Button
        android:id="@+id/false_button"
        android:layout_width="197dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="220dp"
        android:backgroundTint="#E3F2FD"
        android:onClick="answer"
        android:text="@string/false_"
        android:textColor="#EA80FC"
        app:layout_constraintBaseline_toBaselineOf="@+id/true_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/true_button"
        app:layout_constraintStart_toStartOf="@+id/true_button" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left"
        app:constraint_referenced_ids="false_button,true_button" />

</androidx.constraintlayout.widget.ConstraintLayout>
